:art: Completing the Athlete Statistics page

--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
@@ -28,17 +28,19 @@
 
                     <mat-form-field appearance="outline">
                       <mat-label>Experience</mat-label>
-                      <select formControlName="runningLevel" matNativeControl required>
+                      <select formControlName="runningLevel" matNativeControl (ngModelChange)="showRunning($event)">
                         <option value="Beginner">Beginner</option>
                         <option value="Intermediate">Intermediate</option>
                         <option value="Advanced">Advanced</option>
                       </select>
                     </mat-form-field>
 
-                    <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-form-field *ngIf="hideRun" class="example-full-width" appearance="outline">
                       <mat-label>Tell us about your running</mat-label>
                       <textarea formControlName="runningBio" [maxLength]="150" matInput placeholder="I enjoy road, trail and everything in between..."></textarea>
                     </mat-form-field>
+
+                    <mat-error *ngIf="errRunning">Bio is required</mat-error>
 
                   </div>
 
@@ -58,19 +60,21 @@
 
                     <mat-form-field appearance="outline">
                       <mat-label>Experience</mat-label>
-                      <select formControlName="ridingLevel" matNativeControl required>
+                      <select formControlName="ridingLevel" matNativeControl (ngModelChange)="showRiding($event)">
                         <option value="Beginner">Beginner</option>
                         <option value="Intermediate">Intermediate</option>
                         <option value="Advanced">Advanced</option>
                       </select>
                     </mat-form-field>
 
-                    <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-form-field *ngIf="hideRide" class="example-full-width" appearance="outline">
                       <mat-label>Tell us about your riding</mat-label>
                       <textarea formControlName="ridingBio" [maxLength]="150" matInput placeholder="I enjoy road, trail and everything in between..."></textarea>
                     </mat-form-field>
                     
                   </div>
+
+                  <mat-error *ngIf="errRiding">Bio is required</mat-error>
 
                 </mat-expansion-panel>
 
@@ -88,19 +92,21 @@
 
                     <mat-form-field appearance="outline">
                       <mat-label>Experience</mat-label>
-                      <select formControlName="swimmingLevel" matNativeControl required>
+                      <select formControlName="swimmingLevel" matNativeControl (ngModelChange)="showSwim($event)">
                         <option value="Beginner">Beginner</option>
                         <option value="Intermediate">Intermediate</option>
                         <option value="Advanced">Advanced</option>
                       </select>
                     </mat-form-field>
 
-                    <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-form-field *ngIf="hideSwim" class="example-full-width" appearance="outline">
                       <mat-label>Tell us about your swimming</mat-label>
                       <textarea formControlName="swimmingBio" [maxLength]="150" matInput placeholder="I enjoy indoor, outdoor and everything in between..."></textarea>
                     </mat-form-field>
                     
                   </div>
+
+                  <mat-error *ngIf="errSwim">Bio is required</mat-error>
 
                 </mat-expansion-panel>
 
@@ -118,23 +124,33 @@
 
                     <mat-form-field appearance="outline">
                       <mat-label>Experience</mat-label>
-                      <select formControlName="weightLevel" matNativeControl required>
+                      <select formControlName="weightLevel" matNativeControl (ngModelChange)="showWeights($event)">
                         <option value="Beginner">Beginner</option>
                         <option value="Intermediate">Intermediate</option>
                         <option value="Advanced">Advanced</option>
                       </select>
                     </mat-form-field>
 
-                    <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-form-field *ngIf="hideWeights" class="example-full-width" appearance="outline">
                       <mat-label>Tell us about your weight training</mat-label>
                       <textarea formControlName="weightBio" [maxLength]="150" matInput placeholder="I enjoy powerlifting and light cardio..."></textarea>
                     </mat-form-field>
                     
                   </div>
 
+                  <mat-error *ngIf="errWeight">Bio is required</mat-error>
+
                 </mat-expansion-panel>
 
               </mat-accordion>
+
+              <mat-error *ngIf="errChooseSport" class="mr-3 mt-3">At least one activity is required</mat-error>
+              <mat-hint class="fullhint">
+                <div *ngIf="!errChooseSport" class="mt-2 mr-2">
+                  At least one activity is required
+                </div>
+              </mat-hint>
+
 
               <!--Submit button-->
               <div class="submitButton mt-3">
@@ -146,7 +162,7 @@
           </mat-card-content>
   
         </mat-card>
-  
+
   </mat-grid-list>
-    
+ 
 </div>
