--- a/libs/client/profile/feature/src/lib/profile/profile.component.scss
+++ b/libs/client/profile/feature/src/lib/profile/profile.component.scss
@@ -1,9 +1,10 @@
-.mainCard {
+mat-card {
   max-width: 400px;
   width: 90vw;
   margin: 2em auto;
   padding: 2em auto;
   position: absolute;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -0%);
   background-color: rgba(255, 255, 255, 1);
@@ -30,4 +31,32 @@ mat-form-field {
 #save {
   width: 100%;
   background-color: #1b1a1b !important;
+}
+.fullhint {
+  width: 100% !important;
+}
+mat-error {
+  text-align: right;
+}
+
+.b { color: #4285F4; }
+.r { color: #EA4335; }
+.y { color: #FBBC05; }
+.g { color: #34A853; }
+
+p {
+    font-size: 12px !important;
+}
+mat-hint {
+  text-align: right !important;
+}
+
+::ng-deep .mat-form-field-wrapper {
+  margin-bottom: -1.25em;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
