--- a/libs/client/profile/feature/src/lib/profile/profile.component.html
+++ b/libs/client/profile/feature/src/lib/profile/profile.component.html
@@ -27,7 +27,7 @@
         <form [formGroup]="updateForm">
 
           <h1 class="text-center">Edit Profile</h1>
-          <div class="Change text-center"><p routerLink="/" class="changePassword">My activities</p></div>
+          <div class="Change text-center"><p routerLink="/configureprofile" class="changePassword">My activities</p></div>
           <!-- Name -->
           <mat-form-field appearance="outline">
               <mat-label>Name</mat-label>
