:fire: Adding the Navbar

--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
@@ -98,6 +98,10 @@ mat-hint {
     text-align: right !important;
 }
 
+#center {
+    text-align: center;
+}
+
 textarea {
     max-height: 12vh !important;
 }
