--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
@@ -1,15 +1,13 @@
+<training-buddy-signed-navbar></training-buddy-signed-navbar>
 
-<div id="background">
-
-    <training-buddy-signed-navbar></training-buddy-signed-navbar>
-
+<div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
 
     <div class="request-card">
         <mat-grid-list cols="2" rows="1" rowHeight="1:1" *ngFor="let req of requests">
            
             <mat-grid-tile>
                 <div class="imagecontent">
-                    <img mat-card-xxs-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+                    <img mat-card-md-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
                 </div>
             </mat-grid-tile>
 
@@ -27,5 +25,8 @@
         </mat-grid-list>
 
     </div>
+
     
 </div>
+
+<training-buddy-navbar></training-buddy-navbar>
