--- a/libs/client/shared/components/navbar/ui/src/lib/signed/signed.component.scss
+++ b/libs/client/shared/components/navbar/ui/src/lib/signed/signed.component.scss
@@ -13,3 +13,10 @@ mat-toolbar {
 span {
     color : white;
 }
+
+p {
+    // position: sticky;
+    // top: 0;
+    // z-index: 1000;
+    width: 100vw;
+}
