Adding dashboard setup

--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
@@ -1,32 +1,38 @@
 <training-buddy-signed-navbar></training-buddy-signed-navbar>
 
 <div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
-
-    <div class="request-card">
-        <mat-grid-list cols="2" rows="1" rowHeight="1:1" *ngFor="let req of requests">
-           
-            <mat-grid-tile>
-                <div class="imagecontent">
-                    <img mat-card-md-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-                </div>
-            </mat-grid-tile>
-
-            <mat-grid-tile>
-
-                <div class="rightcontent">
-                    <mat-card-title-group>
-                        <mat-card-title>{{ req.name }} {{ req.surname }}</mat-card-title>
-                        <mat-card-subtitle>{{ req.location }}</mat-card-subtitle>
-                    </mat-card-title-group>
-                </div>
-                
-            </mat-grid-tile>
-
-        </mat-grid-list>
-
-    </div>
-
-    
 </div>
+
+
+        <div class="contentpage">
+            <mat-card>
+                <!-- <mat-grid-list cols="2" rows="1" rowHeight="1:1" *ngFor="let req of requests">
+               
+                    <mat-grid-tile>
+                        <div class="imagecontent">
+                            <img mat-card-md-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+                        </div>
+                    </mat-grid-tile>
+        
+                    <mat-grid-tile>
+        
+                        <div class="rightcontent">
+                            <mat-card-title-group>
+                                <mat-card-title>{{ req.name }} {{ req.surname }}</mat-card-title>
+                                <mat-card-subtitle>{{ req.location }}</mat-card-subtitle>
+                            </mat-card-title-group>
+                        </div>
+                        
+                    </mat-grid-tile>
+        
+                </mat-grid-list> -->
+    
+                <mat-card-content>
+                    here
+                </mat-card-content>
+                
+            </mat-card>
+        </div>
+
 
 <training-buddy-navbar></training-buddy-navbar>
