--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
@@ -1,15 +1,3 @@
-#background {
-    height: 100vh;
-    width: 100vw;
-
-    background-size: cover;
-    // background-attachment: fixed;
-    background-attachment: scroll;
-    background-position: center;
-    // position: sticky;
-    z-index: 1000;
-}
-
 .request-card {
     max-width: 400px;
     margin-bottom: 8px;
@@ -19,20 +7,21 @@
     width: 100%;
 }
 
-.imagecontent {
-    width: 100%;
-}
-
 .imagecontent > img {
     border-radius: 10%;
     max-width: 100% !important;
     margin: 15px !important;
 }
 
-body {
-    height: fit-content;
+mat-card {
+    max-width: 400px;
+    width: 90vw;
+    margin: 2em auto;
+    padding: 2em auto;
 }
 
-.contentpage {
-    position: relative;
+#background {
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
