--- a/libs/client/shared/components/navbar/ui/src/lib/signed/signed.component.scss
+++ b/libs/client/shared/components/navbar/ui/src/lib/signed/signed.component.scss
@@ -15,8 +15,8 @@ span {
 }
 
 p {
-    // position: sticky;
-    // top: 0;
-    // z-index: 1000;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
     width: 100vw;
 }
