--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
@@ -3,18 +3,8 @@
     margin-bottom: 8px;
 }
 
-.rightcontent {
-    width: 100%;
-}
-
-.imagecontent > img {
-    border-radius: 10%;
-    max-width: 100% !important;
-    margin: 15px !important;
-}
-
 mat-card {
-    max-width: 400px;
+    max-width: 600px;
     width: 90vw;
     margin: 2em auto;
     padding: 2em auto;
@@ -24,4 +14,29 @@ mat-card {
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+#incomingRequests {
+    background-color: rgba(0, 0, 0, 0);;
+}
+
+.acceptTitle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+mat-icon:hover {
+    cursor: pointer;
+}
+
+#accept {
+    color: rgb(42, 122, 42);
+    font-size: 28px;
+
+}
+
+#reject {
+    color: rgb(207, 63, 63);
+    font-size: 28px;
 }
