--- a/libs/client/shared/components/navbar/ui/src/lib/unsignednavbar/unsignednavbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/unsignednavbar/unsignednavbar.component.html
@@ -4,7 +4,7 @@
 
     <mat-toolbar-row>
 
-      <span>Training-Buddy (not signed in)</span>
+      <span>Training-Buddy</span>
 
       <span class="example-spacer"></span>
 
