--- a/libs/client/settings/feature/src/lib/settings/settings.component.html
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.html
@@ -1,6 +1,5 @@
 <div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
-<training-buddy-signed-navbar></training-buddy-signed-navbar>
-    <mat-card class="mainCard">
+    <mat-card class="mainCard mt-12">
        
         <figure class="relative flex flex-col-reverse bg-zinc-900 rounded-lg p-6 darkbg-zinc-900 dark:highlight-white/5">
             <blockquote class="mt-6 text-slate-700 dark:text-slate-300">
@@ -90,5 +89,5 @@
      
         </mat-card-content>
       </mat-card>
-    
+    <training-buddy-navbar></training-buddy-navbar>
 </div>
