--- a/libs/client/settings/feature/src/lib/settings/settings.component.scss
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.scss
@@ -4,6 +4,7 @@
     margin: 2em auto;
     padding: 2em auto;
     position: absolute;
+    top: 0%;
     left: 50%;
     transform: translate(-50%, -0%);
     background-color: rgba(255, 255, 255, 1);
