--- a/libs/client/shared/components/navbar/ui/src/lib/navbar/navbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
     <mat-icon (click)="route('/dashboard')">dashboard</mat-icon>
     <mat-icon>add_circle</mat-icon>
-    <mat-icon (click)="route('/login')">person</mat-icon>
+    <mat-icon (click)="route('/settings')">person</mat-icon>
 </mat-toolbar>
