Complete routing for Demo 1

--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
@@ -2,9 +2,10 @@ mat-card {
     max-width: 400px;
     width: 90vw;
     margin: 2em auto;
+    margin-top: 8em;
     padding: 2em auto;
     position: absolute;
-    top: 50%;
+    top: 100%;
     left: 50%;
     transform: translate(-50%, -0%);
     background-color: rgba(255, 255, 255, 1);
